build_log_mixin_fix.txt
========================================
IEB CLIENT - NUCLEAR BUILDER (DEBUG)
========================================
[INFO] Running build...
To honour the JVM settings for this build a new JVM will be forked. Please consider using the daemon: https://docs.gradle.org/4.10.3/userguide/gradle_daemon.html.
Daemon will be stopped at the end of the build stopping after processing

> Configure project :
WARNING: You are using an unsupported version of ForgeGradle.
Please consider upgrading to ForgeGradle 5 and helping in the efforts to get old versions working on the modern toolchain.
See https://gist.github.com/TheCurle/fe7ad3ede188cbdd15c235cc75d52d4a for more info on contributing.
#################################################
         ForgeGradle 2.1.3-g6a7c715        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################

> Task :deobfCompileDummyTask
> Task :getVersionJson
> Task :extractUserdev UP-TO-DATE
> Task :downloadClient SKIPPED
> Task :downloadServer SKIPPED
> Task :splitServerJar SKIPPED
> Task :mergeJars SKIPPED
> Task :applyBinaryPatches SKIPPED
> Task :deobfProvidedDummyTask
> Task :extractDependencyATs SKIPPED
> Task :extractMcpData SKIPPED
> Task :extractMcpMappings SKIPPED
> Task :genSrgs SKIPPED
> Task :deobfMcMCP SKIPPED
> Task :sourceApiJava UP-TO-DATE
> Task :compileApiJava NO-SOURCE
> Task :processApiResources NO-SOURCE
> Task :apiClasses UP-TO-DATE
> Task :sourceMainJava

> Task :compileJava
Potential refmap conflict. Duplicate refmap name mixins.iebclient.refmap.json specified for sourceSet main, already defined for sourceSet main
Note: SpongePowered MIXIN Annotation Processor Version=0.7.11
Note: ObfuscationServiceMCP supports type: "searge"
Note: ObfuscationServiceMCP supports type: "notch"
Note: Loading searge mappings from C:\Users\?klim Can\.gradle\caches\minecraft\de\oceanlabs\mcp\mcp_stable\22\srgs\mcp-srg.srg
Note: Loading notch mappings from C:\Users\?klim Can\.gradle\caches\minecraft\de\oceanlabs\mcp\mcp_stable\22\srgs\mcp-notch.srg
Note: Writing refmap to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\compileJava-refmap.json
Note: Writing refmap to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\compileJava-refmap.json
Note: Writing searge output SRGs to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\mcp-srg.srg
Note: Writing notch output SRGs to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\mcp-notch.srg
C:\Users\?klim Can\Downloads\ieb_client\build\sources\main\java\dev\iebgames\iebclient\mixin\MixinBlock.java:4: error: cannot find symbol
@Mixin(Block.class)
 ^
  symbol: class Mixin
C:\Users\?klim Can\Downloads\ieb_client\build\sources\main\java\dev\iebgames\iebclient\mixin\MixinBlock.java:8: error: cannot find symbol
    public void shouldSideBeRendered(IBlockAccess worldIn, BlockPos pos, EnumFacing side, CallbackInfoReturnable<Boolean> cir) {
                                                           ^
  symbol:   class BlockPos
  location: class MixinBlock
C:\Users\?klim Can\Downloads\ieb_client\build\sources\main\java\dev\iebgames\iebclient\mixin\MixinBlock.java:8: error: cannot find symbol
    public void shouldSideBeRendered(IBlockAccess worldIn, BlockPos pos, EnumFacing side, CallbackInfoReturnable<Boolean> cir) {
                                                                         ^
  symbol:   class EnumFacing
  location: class MixinBlock
C:\Users\?klim Can\Downloads\ieb_client\build\sources\main\java\dev\iebgames\iebclient\mixin\MixinBlock.java:7: error: cannot find symbol
    @Inject(method = "shouldSideBeRendered", at = @At("HEAD"), cancellable = true)
     ^
  symbol:   class Inject
  location: class MixinBlock
Note: Writing refmap to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\compileJava-refmap.json
Note: Writing refmap to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\compileJava-refmap.json
Note: Writing searge output SRGs to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\mcp-srg.srg
Note: Writing notch output SRGs to C:\Users\?klim Can\Downloads\ieb_client\build\tmp\compileJava\mcp-notch.srg
4 errors

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

Deprecated Gradle features were used in this build, making it incompatible with Gradle 5.0.
Use '--warning-mode all' to show the individual deprecation warnings.
See https://docs.gradle.org/4.10.3/userguide/command_line_interface.html#sec:command_line_warnings

BU?LD FAILED in 13s
7 actionable tasks: 5 executed, 2 up-to-date
Press any key to continue . . . 
